--- a/css/styles.css
+++ b/css/styles.css
@@ -49,6 +49,12 @@ ul {
   list-style-type: none;
 }
 
+::placeholder {
+  font-family: 'Nunito', sans-serif;
+  font-size: var(--text-xxs);
+  text-align: left;
+}
+
 img {
   width: 100%;
 }
@@ -140,6 +146,7 @@ img {
   border-radius: 100px;
   border-color: rgba(0, 0, 0, 0);
   outline: none;
+  padding: 0 10px;
 }
 
 .buscar .buscar__button {
@@ -314,6 +321,7 @@ img {
 
 /* NOSOTROS */
 
+
 .nosotros__titulo {
   color: var(--primary);
   font-size: var(--text-lg);
@@ -372,21 +380,126 @@ img {
 /* TIENDA */
 
 
-.titu_categ {
-  font-size: var(--text-sm);
+.titulo__tienda {
+  margin-top: 80px;
+  height: 80px;
+  width: 100%;
+  font-family: 'Arima Madurai', cursive;
+  font-size: var(--text-lg);
   color: var(--primary);
-  text-align: left;
-  font-weight: 900;
+  text-align: center;
+  background-color: var(--secondary);
+  display: grid;
+  align-items: center;
 }
 
-.link_categoria li a {
+.search {
+  height: 140px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content:space-between;
+}
+
+.search .search__form {
+  position: relative;
+}
+
+.search .search__producto {
+  height: 34px;
+  width: 280px;
+  right: 180px;
+  opacity: .6;
+  border-radius: 18px;
+  border-color: rgba(0, 0, 0, 0.185);
+  outline: none;
+  padding: 0 10px;
+}
+
+.search__button {
+  position: absolute;
+  top: 10px;
+  right: 16px;
+  width: 15px;
+  border: none;
+  opacity: .5;
+}
+
+.categoria {
+  margin-right: 70px;
+}
+
+.categoria .categoria__titulo {
+  font-size: var(--text-sm);
+  color: var(--accent);
+  margin-bottom: 16px;
+}
+
+.categoria .categoria__link {
+  margin-bottom: 30px;
+}
+
+.categoria .categoria__link a {
   font-size: var(--text-xs);
-  color: #A3A3A3;
-  text-align: left;
+  color: rgb(154, 154, 154);
+}
+
+.categoria .categoria__link li {
+  margin-top: 15px;
+  margin-bottom: 15px;
+}
+
+.galeria__shop {
+  width: 100%;
+}
+
+.container__shop {
+  max-width: 1200px;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.shop {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.shop .shop__galeria {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  width: 100%;
+  margin-bottom: 40px;
+}
+
+.shop__producto {
+  position: relative;
+  padding: 0, 0, 0, 20px;
+}
+
+.shop .shop__picture img {
+  width: 230px;
+  height: 300px;
+  border-radius: 15%;
+}
+
+.shop .shop__descripcion a {
+  position: absolute;
+  bottom: 8%;
+  width: 230px;
+  color: var(--basic);
+  font-size: var(--text-sm);
+  font-family: 'Arima Madurai', cursive;
+  text-align: center;
 }
 
 
 /* CATERING */
+
 
 .catering_desc p {
   margin: auto;
