--- a/css/styles.css
+++ b/css/styles.css
@@ -23,7 +23,13 @@
   --text-sm: 1.7em;
   --text-xs: 1.2em;
   --text-xxs: 1em;
+
+  /* Spacings */
+
+  --sp-sm:1rem;
+
 }
+
 
 /* NORMALIZE */
 
@@ -64,10 +70,19 @@ img {
   margin: 0 auto;
 }
 
+option {
+  font-family: 'Nunito', sans-serif;
+  font-size: var(--text-xxs);
+}
+
 .salto__linea img {
   height: 50px;
   margin-top: 40px;
   margin-bottom: 40px;
+}
+
+textarea {
+  resize: none;
 }
 
   /* HEADER */
@@ -418,11 +433,23 @@ img {
 
 .search__button {
   position: absolute;
-  top: 10px;
+  top: 9px;
   right: 16px;
   width: 15px;
   border: none;
   opacity: .5;
+}
+
+.ordenar__producto {
+  font-family: 'Nunito', sans-serif;
+  height: 34px;
+  width: 280px;
+  right: 180px;
+  opacity: .6;
+  border-radius: 18px;
+  border-color: rgba(0, 0, 0, 0.185);
+  outline: none;
+  padding: 0 10px;
 }
 
 .categoria {
@@ -501,35 +528,178 @@ img {
 /* CATERING */
 
 
-.catering_desc p {
-  margin: auto;
-  display: block;
-  width: 80%;
+.titulo__catering {
+  margin-top: 10px;
+  margin-bottom: 20px ;
+  height: 60px;
+  font-family: 'Arima Madurai', cursive;
+  font-size: var(--text-lg);
+  color: var(--primary);
+  text-align: center;
+}
+
+.catering {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin-top: 55px;
+}
+
+.catering__descripcion {
   font-size: var(--text-sm);
   text-align: left;
-  line-height: 40px;
+  line-height: 28px;
+  margin-right: 10px;
 }
 
-.catering_desc ul li {
-  margin: auto;
-  display: block;
-  width: 80%;
-  font-size: var(--text-sm);
+.catering__descripcion ul li {
+  list-style-type:circle;
   text-align: left;
   line-height: 40px;
+  margin-left: 50px;
 }
 
-.catering_img img {
-  display: block;
-  width: 800px;
-  height: 400px;
+.catering__picture{
+  width: 680px;
+  display: grid;
+  align-content: center;
+  gap: var(--sp-sm);
+  align-items: center;
+  grid-template-columns: 165px 160px 160px 165px;
+  grid-template-rows: 130px 190px;
 }
 
-.titulo_form {
-  display: block;
+.catering__img:nth-of-type(1) {
+  grid-row-start: 1 ;
+  grid-row-end: 3;
+  grid-column: 1;
+}
+
+.catering__img:nth-of-type(2) {
+  grid-column-start: 2;
+  grid-column-end: 3;
+}
+
+.catering__img:nth-of-type(3) {
+  grid-column: 3 / 4;
+}
+
+.catering__img:nth-of-type(4) {
+  grid-row: 2;
+  grid-column-start: 2;
+  grid-column-end: 4;
+}
+
+.catering__img:nth-of-type(5) {
+  grid-row-start: 1 ;
+  grid-row-end: 3;
+  grid-column: 4;
+}
+
+.catering__contacto {
+  margin: 40px 50px;
+  font-size: var(--text-sm);
+  text-align: center;
+  line-height: 35px;
+}
+
+.formulario__titulo {
   color: var(--primary);
   font-family: 'Arima Madurai', cursive;
   text-align: center;
+  font-size: var(--text-md);
+  margin: 50px 0;
+}
+
+.formulario__content {
+  width: 320px;
+  height: 90px;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  margin: auto;
+}
+
+.formulario__content ul {
+  width: 850px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  margin: 0 auto;
+}
+
+.formulario__content li {
+  display: flex;
+  flex-direction: column;
+}
+
+.formulario__contacto {
+  width: 850px;
+  height: 320px;
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  justify-content: space-between;
+  margin: 0 auto;
+}
+
+.formulario__contacto li {
+  display: flex;
+  flex-direction: column;
+}
+
+.formulario__text {
+  font-family: 'Nunito', sans-serif;
+  height: 34px;
+  width: 320px;
+  right: 180px;
+  opacity: .6;
+  border:2px solid rgba(0, 0, 0, 0.185);
+  border-radius: 18px;
+  outline: none;
+  margin-bottom: 25px;
+  padding: 0 8px;
+}
+
+.formulario__coment {
+  font-family: 'Nunito', sans-serif;
+  height: 60px;
+  width: 440px;
+  right: 180px;
+  opacity: .6;
+  border:2px solid rgba(0, 0, 0, 0.185);
+  border-radius: 18px;
+  outline: none;
+  margin-bottom: 25px;
+  padding: 8px 8px;
+  height: 220px;
+}
+
+.formulario__items {
+  font-size: var(--text-xs);
+  font-weight: bold;
+  margin-bottom: 20px;
+}
+
+.button {
+  text-align: center;
+  margin-bottom: 100px;
+}
+
+.button_enviar {
+  margin: 0 auto;
+  width: 100px;
+  height: 30px;
+  background-color: var(--accent);
+  border-radius: 20px;
+  text-decoration: none;
+  color: var(--light);
+  font-family: 'Nunito', sans-serif;
+  font-size: var(--text-sm);
+  font-weight: bold;
+  text-align: center;
+  border: none;
 }
 
 
