--- a/css/styles.css
+++ b/css/styles.css
@@ -1,38 +1,38 @@
-/* IMPORTS */
+IMPORTS
 
-@import url('https://fonts.googleapis.com/css2?family=Arima+Madurai:wght@300;400;800;900&family=Nunito:wght@400;500;600&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Arima+Madurai:wght@300;400;800;900&family=Nunito:wght@400;500;600&display=swap'); */
 
 /* VARIABLES */
 
-:root {
+/* :root { */
 
   /* Palette */
 
-  --primary: #ff7ebc;
+  /* --primary: #ff7ebc;
   --secondary: #ffddec;
   --light: #fdfdfd;
   --accent: #ff00aa;
-  --basic: #000000;
+  --basic: #000000; */
 
   /* Font Sizes */
 
-  --text-xxl: 4.8em;
+  /* --text-xxl: 4.8em;
   --text-xl: 3.6em;
   --text-lg: 3em;
   --text-md: 2.2em;
   --text-sm: 1.7em;
   --text-xs: 1.2em;
-  --text-xxs: 1em;
+  --text-xxs: 1em; */
 
   /* Spacings */
 
-  --sp-sm:1rem;
-}
+  /* --sp-sm:1rem;
+} */
 
 
 /* NORMALIZE */
 
-* {
+/* * {
   padding: 0; 
   margin: 0; 
   box-sizing: border-box;
@@ -82,11 +82,11 @@ option {
 
 textarea {
   resize: none;
-}
+} */
 
-  /* HEADER */
+/* HEADER */
 
-.navbar {
+/* .navbar {
   display: none;
 }
 
@@ -213,12 +213,12 @@ textarea {
 .menu .menu__item .menu__link:hover {
   color: var(--accent);
   background-color: transparent;
-}
+} */
 
 
 /* INICIO */
 
-.inicio {
+/* .inicio {
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -337,13 +337,13 @@ textarea {
   height: 20px;
   width: 20px;
   border-radius: 50%;
-}
+} */
 
 
 /* NOSOTROS */
 
 
-.nosotros__titulo h1 {
+/* .nosotros__titulo h1 {
   color: var(--primary);
   font-size: var(--text-xxl);
   font-family: 'Arima Madurai', cursive;
@@ -397,13 +397,13 @@ textarea {
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: fixed;
-}
+} */
 
 
 /* TIENDA */
 
 
-.titulo__tienda {
+/* .titulo__tienda {
   margin-top: 80px;
   height: 80px;
   width: 100%;
@@ -530,13 +530,13 @@ textarea {
   font-size: var(--text-sm);
   font-family: 'Arima Madurai', cursive;
   text-align: center;
-}
+} */
 
 
 /* CATERING */
 
 
-.titulo__catering {
+/* .titulo__catering {
   margin-top: 10px;
   margin-bottom: 20px ;
   height: 60px;
@@ -707,12 +707,12 @@ textarea {
   font-weight: bold;
   text-align: center;
   border: none;
-}
+} */
 
 
 /* CONTACTO */
 
-.container__contacto {
+/* .container__contacto {
   max-width: 1200px;
   margin: 0 auto;
   display: flex;
@@ -839,11 +839,11 @@ hr {
   font-size: var(--text-xs);
   line-height: 20px;
   margin: auto 0;
-}
+} */
 
 /* FOOTER */
 
-footer {
+/* footer {
   width: 100%;
   height: 100%;
   margin-top: 4%;
@@ -952,12 +952,12 @@ span img {
   color: var(--light);
   font-size: var(--text-xxs);
   margin: auto;
-}
+} */
 
 
 /* MEDIAS */
 
-@media screen and (max-width: 576px) { 
+/* @media screen and (max-width: 576px) { 
 
 .top {
   flex-direction: column;
@@ -1136,4 +1136,4 @@ span img {
     flex: 0 0 0%;
   }
 
-}
+} */
