--- a/css/translated.css
+++ b/css/translated.css
@@ -52,7 +52,7 @@ textarea {
   display: none; }
 
 .banner__inicio {
-  background-image: url(../img/bannerejemplo.png);
+  background-image: url(../img/bannerindex.png);
   background-position: center;
   background-size: cover;
   width: 100%;
@@ -252,14 +252,14 @@ footer {
       .pie .pie__contacto .sucursales h4 {
         padding: 5px 0 5px 0;
         text-align: center;
-        font-size: 1em;
+        font-size: 1.2em;
         text-align: left; }
       .pie .pie__contacto .sucursales h3 {
         padding: 8px 0 8px 0;
         text-align: center;
         font-size: 1.2em;
         text-align: left;
-        font-weight: bolder; }
+        font-weight: 600; }
       .pie .pie__contacto .sucursales span img {
         vertical-align: middle;
         height: 20px;
@@ -275,18 +275,6 @@ footer {
     margin: auto; }
 
 /* MEDIAS */
-@media screen and (max-width: 576px) {
-  .pie .pie__contacto {
-    height: 100%;
-    margin-top: 10px; }
-    .pie .pie__contacto .sucursales {
-      height: 100%;
-      flex-direction: column; }
-      .pie .pie__contacto .sucursales h4 {
-        text-align: center; }
-      .pie .pie__contacto .sucursales h3 {
-        text-align: center; } }
-
 @media screen and (max-width: 768px) {
   .pie {
     width: 100%;
@@ -303,6 +291,18 @@ footer {
       flex-direction: column;
       justify-content: flex-start;
       margin: 15px auto; } }
+
+@media screen and (max-width: 576px) {
+  .pie .pie__contacto {
+    height: 100%;
+    margin-top: 10px; }
+    .pie .pie__contacto .sucursales {
+      height: 100%;
+      flex-direction: column; }
+      .pie .pie__contacto .sucursales h4 {
+        text-align: center; }
+      .pie .pie__contacto .sucursales h3 {
+        text-align: center; } }
 
 /* PAGES */
 /* INICIO */
@@ -420,7 +420,9 @@ footer {
   .pictures .pictures__torta2 {
     position: absolute;
     z-index: 2;
-    top: 30%; } }
+    top: 30%; }
+  .tienda .tienda__galeria {
+    width: 90%; } }
 
 @media screen and (max-width: 1200px) {
   .inicio {
@@ -478,6 +480,7 @@ footer {
 
 .picture__fija {
   height: 480px;
+  margin: 40px 0;
   text-align: center;
   background-image: url(../img/nosotros4.jpg);
   background-position: center;
@@ -486,7 +489,7 @@ footer {
 
 /* MEDIAS */
 @media screen and (max-width: 576px) {
-  .nosotros__titulo h1 {
+  .nosotros .nosotros__titulo h1 {
     font-size: 3.6em;
     height: 100%; }
   .nosotros__descripcion {
@@ -752,7 +755,6 @@ footer {
   margin: 50px 0; }
 
 .formulario__content {
-  width: 320px;
   height: 90px;
   display: flex;
   align-items: center;
@@ -791,6 +793,8 @@ footer {
   align-items: flex-start;
   justify-content: space-between;
   margin: 0 auto; }
+  .formulario__contacto ul {
+    padding: 0px; }
   .formulario__contacto li {
     display: flex;
     flex-direction: column; }
@@ -840,10 +844,25 @@ footer {
     border: none; }
 
 /* MEDIAS */
-@media screen and (max-width: 576px) {
-  .container__shop {
-    max-width: 1200px;
-    margin: 0 20px; } }
+@media screen and (max-width: 1200px) {
+  .catering {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 0 20px; }
+    .catering .catering__picture {
+      height: 100%; }
+  .formulario__content {
+    width: 95%; }
+    .formulario__content form {
+      width: 100%; }
+    .formulario__content ul {
+      padding: 0;
+      width: 100%; }
+  .formulario__contacto {
+    width: 95%; }
+    .formulario__contacto li .formulario__coment {
+      width: 320px; } }
 
 @media screen and (max-width: 768px) {
   .catering {
@@ -872,35 +891,26 @@ footer {
     .formulario__content ul {
       flex-direction: column; }
   .formulario__contacto {
-    width: 100%;
     height: 100%;
     flex-direction: column;
     align-items: center; }
-  .formulario__contacto li .formulario__coment {
-    height: 270px;
-    width: 320px; }
   .button {
     margin-bottom: 70px; } }
 
-@media screen and (max-width: 1200px) {
-  .catering {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 0 20px; }
-    .catering .catering__picture {
-      height: 100%; }
-  .formulario__content {
-    width: 100%; }
-    .formulario__content form {
-      width: 100%; }
-    .formulario__content ul {
-      padding: 0;
-      width: 100%; }
-  .formulario__contacto {
-    width: 100%; }
-    .formulario__contacto li .formulario__coment {
-      width: 360px; } }
+@media screen and (max-width: 576px) {
+  .container__shop {
+    max-width: 1200px;
+    margin: 0 20px; }
+  .catering .catering__picture {
+    grid-template-columns: 120px 120px;
+    grid-template-rows: 100px 130px; }
+  .formulario__content li .formulario__text {
+    width: 250px; }
+  .formulario__contacto li .formulario__text {
+    width: 250px; }
+  .formulario__contacto li .formulario__coment {
+    height: 270px;
+    width: 250px; } }
 
 /* CONTACTO */
 .container__contacto {
@@ -973,6 +983,8 @@ footer {
         flex-direction: row;
         justify-content: space-between;
         width: 570px; }
+        .container__contacto .contacto__sucursales2 .formulario__contactanos .formulario__contactanos2 ul {
+          padding-left: 0; }
         .container__contacto .contacto__sucursales2 .formulario__contactanos .formulario__contactanos2 li {
           display: flex;
           flex-direction: column; }
@@ -1045,7 +1057,7 @@ hr {
     flex-direction: column; }
     .container__contacto .contacto__sucursales2 .formulario__contactanos .formulario__contactanos2 li .formulario__comentario {
       width: 250px;
-      height: 400px; } }
+      height: 350px; } }
 
 @media screen and (max-width: 1200px) {
   .container__contacto {
