--- a/scss/pages/_catering.scss
+++ b/scss/pages/_catering.scss
@@ -94,7 +94,6 @@ margin: 50px 0;
 }
 
 .formulario__content {
-width: 320px;
 height: 90px;
 display: flex;
 align-items: center;
@@ -142,6 +141,10 @@ flex-direction: row;
 align-items: flex-start;
 justify-content: space-between;
 margin: 0 auto;
+
+  ul {
+    padding: 0px;
+  }
 
   
   li {
@@ -206,11 +209,42 @@ margin-bottom: 100px;
 
 /* MEDIAS */
 
-@media screen and (max-width: 576px) { 
+@media screen and (max-width: 1200px) {
 
-  .container__shop {
-  max-width: 1200px;
-  margin: 0 20px;
+  
+  .catering {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 0 20px;
+
+    .catering__picture{
+    height: 100%;
+    }
+  }
+
+  .formulario__content {
+  width: 95%;
+
+    form {
+    width: 100%;
+    }
+    
+    ul {
+    padding: 0;
+    width: 100%;
+    }
+  }
+
+  .formulario__contacto {
+  width: 95%;
+
+    li { 
+
+      .formulario__coment {
+      width: 320px;
+      }
+    }
   }
 }
 
@@ -262,64 +296,57 @@ margin-bottom: 100px;
   }
 
   .formulario__contacto {
-  width: 100%;
   height: 100%;
   flex-direction: column;
   align-items: center;
-  }
-
-  .formulario__contacto {
-    
-    li {
-          
-      .formulario__coment {
-      height: 270px;
-      width: 320px;
-      }
-    }
   }
 
   .button {
   margin-bottom: 70px;
   }
 }
-  
 
-@media screen and (max-width: 1200px) {
+@media screen and (max-width: 576px) { 
 
-  
+  .container__shop {
+  max-width: 1200px;
+  margin: 0 20px;
+  }
+
   .catering {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 0 20px;
 
-    .catering__picture{
-    height: 100%;
+      .catering__picture {
+      grid-template-columns: 120px 120px;
+      grid-template-rows: 100px 130px;
     }
   }
 
   .formulario__content {
-  width: 100%;
-
-    form {
-    width: 100%;
-    }
-    
-    ul {
-    padding: 0;
-    width: 100%;
+  
+    li {
+      
+      .formulario__text {
+        width: 250px;
+      }
     }
   }
 
   .formulario__contacto {
-  width: 100%;
-
-    li { 
+  
+    li {
+      
+      .formulario__text {
+        width: 250px;
+      }
 
       .formulario__coment {
-      width: 360px;
+      height: 270px;
+      width: 250px;
       }
     }
   }
 }
+
+
+  
+
