--- a/scss/partials/_footer.scss
+++ b/scss/partials/_footer.scss
@@ -92,7 +92,7 @@ background-size: cover;
       h4 {
       padding: 5px 0 5px 0;
       text-align:center;
-      font-size: $text-xxs;
+      font-size: $text-xs;
       text-align:left;
       }
     
@@ -101,7 +101,7 @@ background-size: cover;
       text-align:center;
       font-size: $text-xs;
       text-align:left;
-      font-weight: bolder;
+      font-weight: 600;
       }
     
       span img {
@@ -130,6 +130,28 @@ background-color: $basic;
 
 /* MEDIAS */
 
+@media screen and (max-width: 768px) { 
+
+  .pie {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    background-image: url(../img/piefondo.svg);
+    background-position: center;
+    background-size: cover;
+
+    .pie__redes {
+      width: 100%;
+      height: 120px;
+      display: flex;
+      flex-direction: column;
+      justify-content: flex-start;
+      margin: 15px auto;
+    }
+  }
+}
+
 @media screen and (max-width: 576px) { 
 
   .pie {
@@ -150,29 +172,6 @@ background-color: $basic;
         text-align:center;
         }
       }
-    }
-  }
-}
-
-
-@media screen and (max-width: 768px) { 
-
-  .pie {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-end;
-    background-image: url(../img/piefondo.svg);
-    background-position: center;
-    background-size: cover;
-
-    .pie__redes {
-      width: 100%;
-      height: 120px;
-      display: flex;
-      flex-direction: column;
-      justify-content: flex-start;
-      margin: 15px auto;
     }
   }
 }
