--- a/scss/partials/_header.scss
+++ b/scss/partials/_header.scss
@@ -5,7 +5,7 @@
 }
   
 .banner__inicio {
-  background-image: url(../img/bannerejemplo.png);
+  background-image: url(../img/bannerindex.png);
   background-position: center;
   background-size:cover ;
   width: 100%;
