--- a/css/translated.css
+++ b/css/translated.css
@@ -394,7 +394,38 @@ footer {
       border-radius: 50%; }
 
 /* MEDIAS */
+@media screen and (max-width: 1200px) {
+  .inicio {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 100%; }
+    .inicio .inicio__descripcion {
+      text-align: center;
+      margin: 20px 50px;
+      width: 95%; }
+  .row {
+    justify-content: space-evenly; }
+  .col {
+    flex: 0 0 0%; } }
+
+@media screen and (max-width: 768px) {
+  .pictures .pictures__torta1 {
+    position: absolute;
+    z-index: 1;
+    left: 4%; }
+  .pictures .pictures__torta2 {
+    position: absolute;
+    z-index: 2;
+    top: 30%; }
+  .tienda .tienda__galeria {
+    width: 90%; } }
+
 @media screen and (max-width: 576px) {
+  .inicio .inicio__descripcion {
+    font-size: 2.2em;
+    line-height: 50px;
+    width: 80%; }
   .inicio .pictures {
     position: relative;
     width: 100%;
@@ -412,40 +443,14 @@ footer {
       height: 200px;
       border-radius: 50%; } }
 
-@media screen and (max-width: 768px) {
-  .pictures .pictures__torta1 {
-    position: absolute;
-    z-index: 1;
-    left: 4%; }
-  .pictures .pictures__torta2 {
-    position: absolute;
-    z-index: 2;
-    top: 30%; }
-  .tienda .tienda__galeria {
-    width: 90%; } }
-
-@media screen and (max-width: 1200px) {
-  .inicio {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    height: 100%; }
-    .inicio .inicio__descripcion {
-      text-align: center;
-      margin: 20px 50px;
-      width: 95%; }
-  .row {
-    justify-content: space-evenly; }
-  .col {
-    flex: 0 0 0%; } }
-
 /* NOSOTROS */
 .nosotros .nosotros__titulo h1 {
   color: #ff7ebc;
   font-size: 4.8em;
   font-family: 'Arima Madurai', cursive;
   text-align: center;
-  height: 60px; }
+  height: 60px;
+  font-weight: 600; }
 
 .nosotros__descripcion {
   font-family: 'Arima Madurai', cursive;
@@ -924,12 +929,13 @@ footer {
       color: #ff7ebc;
       font-family: 'Arima Madurai', cursive;
       text-align: center;
-      font-size: 3em;
       display: flex;
       align-items: center;
       justify-content: flex-start;
       margin-top: 80px;
       margin-bottom: 50px; }
+      .container__contacto .contacto__sucursales1 .contacto__titulo h1 {
+        font-size: 3em; }
     .container__contacto .contacto__sucursales1 .sucursales__contacto {
       display: flex;
       flex-direction: column;
@@ -965,12 +971,13 @@ footer {
       color: #ff7ebc;
       font-family: 'Arima Madurai', cursive;
       text-align: center;
-      font-size: 2.2em;
       display: flex;
       align-items: center;
       justify-content: flex-start;
       margin-top: 80px;
       margin-bottom: 50px; }
+      .container__contacto .contacto__sucursales2 .contacto__titulo h1 {
+        font-size: 3em; }
     .container__contacto .contacto__sucursales2 .formulario__contactanos {
       width: 600px;
       height: 100%;
@@ -1036,29 +1043,6 @@ hr {
     border: none; }
 
 /* MEDIAS */
-@media screen and (max-width: 576px) {
-  .container__shop {
-    max-width: 1200px;
-    margin: 0 20px; }
-  .container__contacto .contacto__sucursales1 .sucursales__contacto .sucursales__items .sucursales__logo {
-    width: 24px; }
-  .container__contacto .contacto__sucursales2 .formulario__contactanos .formulario__contactanos2 li .formulario__input {
-    margin-bottom: 30px; } }
-
-@media screen and (max-width: 768px) {
-  .contacto__sucursales1 .sucursales__column {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin: auto; }
-  .container__contacto .contacto__sucursales2 .formulario__contactanos .formulario__contactanos2 {
-    width: 100%;
-    align-items: center;
-    flex-direction: column; }
-    .container__contacto .contacto__sucursales2 .formulario__contactanos .formulario__contactanos2 li .formulario__comentario {
-      width: 250px;
-      height: 350px; } }
-
 @media screen and (max-width: 1200px) {
   .container__contacto {
     display: flex;
@@ -1087,3 +1071,28 @@ hr {
     flex-direction: row; }
   hr {
     display: none; } }
+
+@media screen and (max-width: 768px) {
+  .container__contacto .contacto__sucursales1 .sucursales__column {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: auto; }
+  .container__contacto .contacto__sucursales1 .sucursales__contacto {
+    margin: 10px 0; }
+  .container__contacto .contacto__sucursales2 .formulario__contactanos .formulario__contactanos2 {
+    width: 100%;
+    align-items: center;
+    flex-direction: column; }
+    .container__contacto .contacto__sucursales2 .formulario__contactanos .formulario__contactanos2 li .formulario__comentario {
+      width: 250px;
+      height: 350px; } }
+
+@media screen and (max-width: 576px) {
+  .container__shop {
+    max-width: 1200px;
+    margin: 0 20px; }
+  .container__contacto .contacto__sucursales1 .sucursales__contacto .sucursales__items .sucursales__logo {
+    width: 24px; }
+  .container__contacto .contacto__sucursales2 .formulario__contactanos .formulario__contactanos2 li .formulario__input {
+    margin-bottom: 30px; } }
